<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            tools:context=".DetailActivity">



            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_margin="8dp"
                android:background="@android:color/background_light"
                android:contentDescription="@string/original_title"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Movie Title" />

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="256dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:padding="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_original_title"
                android:contentDescription="@string/movie_poster" />

            <TextView
                android:id="@+id/tv_movie_overview_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/detail_overview"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_movie_poster" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginStart="16dp"
                android:paddingBottom="@dimen/text_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_overview_label"
                tools:text="Overview Content" />


            <TextView
                android:id="@+id/tv_movie_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/detail_release_date"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@id/tv_original_title" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                app:layout_constraintLeft_toRightOf="@id/tv_movie_release_date_label"
                app:layout_constraintTop_toBottomOf="@id/tv_original_title"
                tools:text="2017" />

            <TextView
                android:id="@+id/tv_movie_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/tv_movie_release_date_label"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_release_date_label" />

            <TextView
                android:id="@+id/tv_movie_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@id/tv_release_date"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date"
                tools:text="9.1 / 10" />


        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>